--- a/static/options.html
+++ b/static/options.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Grouchy Options</title>
+    <title>GA Swappy Options</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,16 +22,14 @@
     <div class="container">
       
       <div class="page-header">
-        <h1>Grouchy Options</h1>
+        <h1>Swappy Options</h1>
       </div>
       
       <h3>Create New Tag</h3>
-      <div class="alert alert-warning alert-dismissible hidden" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <div class="alert alert-warning hidden" role="alert">
         <strong>Yo Dog!</strong> You didn't enter the tag name.
       </div>
-      <div class="alert alert-success alert-dismissible hidden" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <div class="alert alert-success hidden" role="alert">
         <strong>Yeah buddy!</strong> You've successfully saved your tags!
       </div>
       <div class="row" id="createTag">
