Pull links from text

--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
       </div>
       <br>
 
-
+    <p class="htmlTemplate hidden"></p>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
