--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,10 @@
   </head>
   <body>
     <div class="container-fluid">
-      
+    
+    <h3 class="text-center">GA Swappy</h3>
+    <hr>
+  
       <div class="row">
         <div class="col-xs-4">
           <h4 class="text-right">Key Tags</h4>
