--- a/static/index.html
+++ b/static/index.html
@@ -60,6 +60,7 @@
     <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- popup.html JS -->
     <script src="js/popup.js"></script>
   </body>
 </html>
