--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>GA Swappy</title>
+    <title>GA Taggit</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <body>
     <div class="container-fluid">
     
-    <h3 class="text-center">GA Swappy</h3>
+    <h3 class="text-center">GA Taggit</h3>
     <hr>
   
       <div class="row">
