--- a/static/options.html
+++ b/static/options.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>GA Swappy Options</title>
+    <title>GA Taggit Options</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <div class="container">
       
       <div class="page-header">
-        <h1>Swappy Options</h1>
+        <h1>Taggit Options</h1>
       </div>
       
       <h3>Create New Tag</h3>
